--- a/TODO
+++ b/TODO
@@ -11,3 +11,4 @@
 - use default shell rather than fixed
 - wrap windows with forward/back
 - new window command prompt
+- mouse handling and some other bits elinks needs
