session_flush can go bye-bye again.

--- a/TODO
+++ b/TODO
@@ -13,3 +13,4 @@
 - new window command prompt
 - mouse handling and some other bits elinks needs
 - scrollback
+- server doesn't handle SIGTERM anymore...
