--- a/TODO
+++ b/TODO
@@ -13,6 +13,10 @@
 - scrollback
 - server doesn't handle SIGTERM anymore...
 - sleep(1) to wait for server frankly sucks
-- two-way communication (rename) sucks. lose it and use a comamnd line option
+- two-way communication (rename) sucks. lose it and use a command line option
   for everythin
+- toolbar, copy/paste
 - cleanup/redesign IPC
+- some of the uses of buffers really sucks. buffer_reverse_add/remove,
+  and buffer_insert_range/delete_range are abominations. this should be
+  rethought
