Extend op string and add potential for a single alias.

--- a/TODO
+++ b/TODO
@@ -21,3 +21,4 @@
   and buffer_insert_range/delete_range are abominations. this should be
   rethought
 - figure out once and for all what is going on with backspace and del
+- split list into list-sessions and list-windows
