--- a/TODO
+++ b/TODO
@@ -22,15 +22,6 @@
   rethought
 - figure out once and for all what is going on with backspace and del
 - deal properly with ambiguous ops... list-sessions & list-windows
-- command form:
-	tmux <flags> cmd [-s session] <flags> data
-  eg
-	tmux rename-session -ssession newname
-	tmux rename-window -ssession 5 newname
-  if no session specified:
-	- inside tmux, check $TMUX (pid:session or something)
-        - otherwise if 1 session, use it
-	- otherwise bail with error
 - keys to add:
 	i : show window info (show name, title, size, tty, ...)
 - commands to add:
@@ -41,3 +32,4 @@
 	unlink window (... what about windows not linked to any session???)
 	close window
 	kill session
+- update NOTES!!!!
