--- a/TODO
+++ b/TODO
@@ -10,7 +10,6 @@
 - scrollback
 - server doesn't handle SIGTERM anymore...
 - copy/paste
-- cleanup/redesign IPC
 - the whole input/screen/local thing sucks a bit, reorganise/redesign it
 - line mode/char-at-a-time mode a la telnet?
 - some of the uses of buffers really sucks. buffer_reverse_add/remove,
@@ -30,6 +29,10 @@
 	or use queues/trees and avoid NULLs?
 - client could pass tty fd up to server and then do nothing. what problems 
   would this cause?
+- cleanup/redesign IPC
+	IPC is arse-about-face: too much overhead. 8-byte header for each
+	packet... hrm. already scanning output for \e, could add an extra
+	byte to it for message
 
 -- For 0.1 --------------------------------------------------------------------
 - man page
@@ -43,6 +46,9 @@
 	close window
 	kill session
 	set status on/off
+	set meta
+	set shell
+	bind key??
 - fix resize (width problems with multiple clients?)
 - handle tmux in tmux (check $TMUX and abort)
 - check for some reqd terminfo caps on startup
