More TODO entries

--- a/TODO
+++ b/TODO
@@ -35,6 +35,8 @@
 - CLIENT_HOLD sucks
 - session with CMD_NOSESSION should be an error
 - each command should have a print op as well for list keys
+- List available commands on ambigous command
+- Implicitly add exec to the commands for new windows (switch to disable it)
 
 -- For 0.1 --------------------------------------------------------------------
 - man page
