--- a/TODO
+++ b/TODO
@@ -42,6 +42,8 @@
 - Nested sessions over the network, plug-in another tmux as a window/subsession
 - it would be nice to have multichar commands so you could have C-b K K for
   kill-window to limit accidental presses
+- status-fg/status-bg should be able to a) use strings for colours "red" etc
+  b) set attributes too ("bold-red"?)
 
 -- For 0.1 --------------------------------------------------------------------
 - man page
@@ -55,7 +57,6 @@
 	unlink window (error if window only linked to one session)
 	kill window (C-b backsp)
 	kill session (no not bind by default)
-	set status on/off
 	set shell
 	send prefix
 - handle tmux in tmux (check $TMUX and abort)
