--- a/TODO
+++ b/TODO
@@ -22,8 +22,8 @@
 - client could pass term/tty fd up to server and then do nothing. what problems 
   would this cause? -- need access to all terminfo data at once... signals?
 - cleanup/redesign IPC
-	IPC is arse-about-face: too much overhead. 8-byte header for each
-	packet... hrm. already scanning output for \e, could add an extra
+	IPC is slightly arse-about-face: too much overhead. 8-byte header for
+	each packet... hrm. already scanning output for \e, could add an extra
 	byte to it for message
 - could use bsearch all over the place or get rid of smaller tables (clientmsg)
 - better errors when creating new windows/sessions (how?)
