--- a/TODO
+++ b/TODO
@@ -13,7 +13,10 @@
 - some of the uses of buffers really sucks. buffer_reverse_add/remove,
   and buffer_insert_range/delete_range are abominations. this should be
   rethought
+- handle ioctl/termios stuff on window sockets
 - figure out once and for all what is going on with backspace and del
+      backspace should be translated per the termios setting.
+      del passed through?
 - window creation/idle time
 - attributes could be 8 not 16 bits
 - profile/optimise, particularly (i suspect) input.c
