--- a/TODO
+++ b/TODO
@@ -69,10 +69,11 @@
 - bind non prefix keys
 - stuff like rename would be nice to be able to do in-client like screen, if
   it could be implemented in a non-icky way
-- there is to much redrawing. use flags? (there was a problem with this idea..?)
+- there is to much redrawing. use flags? (there was a problem with this idea...
+  CLIENT_HOLD?)
 - use modes for help etc
 - scrollback should only draw scrolled line on up/down
-
+- horizontal scrolling
 
 -- For 0.2 --------------------------------------------------------------------
 - copy and paste
