--- a/TODO
+++ b/TODO
@@ -56,6 +56,7 @@
 	kill server
 	command to run something without a window at all?
 	command to insert a key into a window (send-key)
+	command to purge window history
  	extend list-clients to list clients attached to a session (-a for all?)
 	bring back detach-session to detach all clients on a session?
 - function groups, bind-key ^W { select-window 0; send-key ^W } etc
