--- a/TODO
+++ b/TODO
@@ -72,6 +72,9 @@
 - there is to much redrawing. use flags?
 - command mode (! + type tmux command)
 - copy mode
+- garbage collect window history (100 lines at a time?) if it hasn't been used
+  in $x time (need window creation/use times)
+- lift SHRT_MAX limits for history
 
 -- For 0.2 --------------------------------------------------------------------
 - copy and paste
