--- a/TODO
+++ b/TODO
@@ -57,7 +57,9 @@
 - lift SHRT_MAX limits for history
 - audit copy/scroll and other modes for problems with very small windows
 - screen_draw_* moved out/renamed (accept TTY_*?)
-- SIGWINCH can probably be handled in server
 
 -- For 0.2 --------------------------------------------------------------------
 - window splitting?
+- restore term cap checks
+- anything which uses cmd_{send,recv}_string will break if the string is
+  split. string length should be part of the command size
