--- a/TODO
+++ b/TODO
@@ -61,6 +61,8 @@
 - chmod +x socket when any client is attached
 - split clients into three RB trees by fd: attached/unattached/dead?
   or tailqs? what would be fastest per-char?
+- everything should write via a screen and modes should be done by switching
+  screen out
 
 -- For 0.2 --------------------------------------------------------------------
 - window splitting?
@@ -69,6 +71,7 @@
   split. string length should be part of the command size
 - echo \\033[35\;46m\\033[2J last line quirk (with C-b r)
 - quick intro section (tmux new/attach/detach) etc
+- is ACS the right way round??
 
 --------
 kmous -- \E[M
