--- a/TODO
+++ b/TODO
@@ -66,12 +66,26 @@
 
 -- For 0.2 --------------------------------------------------------------------
 - window splitting?
-- restore term cap checks
+- restore term cap checks ****
 - anything which uses cmd_{send,recv}_string will break if the string is
   split. string length should be part of the command size
 - echo \\033[35\;46m\\033[2J last line quirk (with C-b r)
 - quick intro section (tmux new/attach/detach) etc
 - is ACS the right way round??
+
+--------
+
+screen redraw.
+
+ops:
+- redraw screen or section of screen to tty without altering it
+	(screen-redraw.c, screen_redraw_ctx)
+	(switching screen etc)
+- draw to screen and optionally tty
+	(window output)
+	(screen-write.c, screen_write_ctx)
+- copy line/column from one screen (inc history) at offset??
+	(scroll/copy mode)
 
 --------
 kmous -- \E[M
