Write status across entire line.

--- a/TODO
+++ b/TODO
@@ -64,6 +64,7 @@
 - multiple paste buffers
 - window splitting?
 - if only one arg to switch-window, assume source-index
+- test on wsvt25, vt100, vt220
 
 -- For 0.2 --------------------------------------------------------------------
 - anything which uses cmd_{send,recv}_string will break if the string is
