--- a/TODO
+++ b/TODO
@@ -71,8 +71,10 @@
 	-- it's not kkeypad/kcursor
 - fix kkeypad/kcursor
 - c/p is still borken in some ways
+- tobiasu says it is borken on Linux with aterm + TERM=rxvt
 
--- For 0.2 --------------------------------------------------------------------
+-- For 0.3 --------------------------------------------------------------------
 - anything which uses cmd_{send,recv}_string will break if the string is
   split. string length should be part of the command size
 - chmod +x socket when any client is attached (upd in lost/accept)
+
