Last bits of basic configuration file. By default in ~/.tmux.conf or specified with -f. Just a list of tmux commands executed when the server is started and before and any session/window is created.

--- a/TODO
+++ b/TODO
@@ -69,6 +69,7 @@
 - tobiasu says it is borken on Linux with aterm + TERM=rxvt
 - poll(2) is broken on OS X/Darwin, a workaround for this would be nice
 - different screen model? layers perhaps? hmm
+- cfg file improvements: * comments to EOL
 
 ---
 [18:20] *priteau* i found something in tmux that could be tweaked to be better
